--- a/platform-system/platform-system-provider/src/main/resources/application-local.yml
+++ b/platform-system/platform-system-provider/src/main/resources/application-local.yml
@@ -23,7 +23,7 @@ spring:
       # 合并多个DruidDataSource的监控数据
       #spring.datasource.useGlobalDataSourceStat=true
     read:
-      url: jdbc:mysql://127.0.0.1:3306/platform?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+      url: jdbc:mysql://127.0.0.1:3306/platform?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=true
       username: root
       password: root
       driver-class-name: com.mysql.jdbc.Driver
